buildconfig = "//build/config/BUILDCONFIG.gn"


default_args = {
  clang_base_path = "/usr"

  is_component_build = false

  treat_warnings_as_errors = false

  clang_use_chrome_plugins = false

  use_goma = true

  v8_experimental_extra_library_files = []
  v8_extra_library_files = []

  v8_monolithic = true
  v8_untrusted_code_mitigations = false
  v8_use_external_startup_data = false
  v8_use_snapshot = true
}